fixed order of headers on mobile version

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
     --order-header-month: 10;
     --order-header-day: 8;
     --order-header-hour: 6;
-    --order-header-hour: 4;
+    --order-header-minute: 4;
     --order-header-second: 2;
     --order-content-year: 13;
     --order-content-month: 11;
